--- a/fks.html
+++ b/fks.html
@@ -42,8 +42,8 @@
 		<p style="text-align:center"> Find Konohamaru 0/1</p>
 <hr>
 <h1 style="text-align:center"> Konohamaru's Locations </h1>
-		<a href="https://user-images.githubusercontent.com/64807615/82740427-25dcff80-9d7b-11ea-8bfa-a92b71f489df.png" target="_blank">
-		<image src="https://user-images.githubusercontent.com/64807615/82740427-25dcff80-9d7b-11ea-8bfa-a92b71f489df.png"; style="width:600px;height:400px;text-align: center;" class="center"></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82740552-66894880-9d7c-11ea-89ed-44c713212ccf.png" target="_blank">
+		<image src="https://user-images.githubusercontent.com/64807615/82740552-66894880-9d7c-11ea-89ed-44c713212ccf.png"; style="width:600px;height:400px;text-align: center;" class="center"></a>
 <br>
 <hr>
 <div class="row">
@@ -79,58 +79,53 @@
 <div class="row">
   <div class="column">
 		<p><b>Location E</b></p>	
-		<a href="xx" target="_blank" style="color:black">
-		<image src="xx"; style="width:100%;height:250px;";></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82739878-2d4dda00-9d76-11ea-9218-d1dcdb568181.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82739878-2d4dda00-9d76-11ea-9218-d1dcdb568181.jpg"; style="width:100%;height:250px;";></a>
 		<p><b>Chunin Exam Hall</b> Garden patch beside between Tenten and a tree</p>
   </div>
 
   <div class="column">
 		<p><b>Location F</b></p>	
-		<a href="xx" target="_blank" style="color:black">
-		<image src="xx"; style="width:100%;height:250px;";></a>
-		<p><b>Keywords:</b> Ruins</p> 
-		<p><b>Location:</b> To the southwest of the border</p>
+		<a href="https://user-images.githubusercontent.com/64807615/82739879-2de67080-9d76-11ea-9873-cd5eeca51f2e.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82739879-2de67080-9d76-11ea-9873-cd5eeca51f2e.jpg"; style="width:100%;height:250px;";></a>
+		<p><b>Ninja School</b> The playground near Kakashi</p>
   </div>
 <hr>
 <div class="row">
   <div class="column">
 		<p><b>Location G</b></p>	
-		<a href="xx" target="_blank" style="color:black">
-		<image src="xx"; style="width:100%;height:250px;";></a>
-		<p><b>Keywords:</b> Outskirts</p> 
-		<p><b>Location:</b> To the southwest of the border</p>
+		<a href="https://user-images.githubusercontent.com/64807615/82739880-2e7f0700-9d76-11ea-81eb-b64ebfa0ec62.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82739880-2e7f0700-9d76-11ea-81eb-b64ebfa0ec62.jpg"; style="width:100%;height:250px;";></a> 
+		<p><b>Hokage Residence</b> Hidden behind the bushes at the left side of Tsunade, Hokage Residence</p>
   </div>
 
   <div class="column">
 		<p><b>Location H</b></p>	
-		<a href="xx" target="_blank" style="color:black">
-		<image src="xx"; style="width:100%;height:250px;";></a>
-		<p><b>Keywords:</b> Ruins</p> 
-		<p><b>Location:</b> To the southwest of the border</p>
+		<a href="https://user-images.githubusercontent.com/64807615/82739882-2f179d80-9d76-11ea-996d-c082273928bf.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82739882-2f179d80-9d76-11ea-996d-c082273928bf.jpg"; style="width:100%;height:250px;";></a>
+		<p><b>Love Temple</b> Beside the stairs coming from Konohagakure Property leading to Love Temple</p>
   </div>
 <hr>
 <div class="row">
   <div class="column">
 		<p><b>Location I</b></p>	
-		<a href="xx" target="_blank" style="color:black">
-		<image src="xx"; style="width:100%;height:250px;";></a>
-		<p><b>Keywords:</b> Outskirts</p> 
-		<p><b>Location:</b> To the southwest of the border</p>
+		<a href="https://user-images.githubusercontent.com/64807615/82739883-2fb03400-9d76-11ea-8264-e01a42815927.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82739883-2fb03400-9d76-11ea-8264-e01a42815927.jpg"; style="width:100%;height:250px;";></a>
+		<p><b>Naruto Uzumaki’s House 1</b> Left side of Naruto Uzumaki; Right side of the restraurant; Behind the trees and garbage bags</p>
   </div>
 
   <div class="column">
 		<p><b>Location J</b></p>	
-		<a href="xx" target="_blank" style="color:black">
-		<image src="xx"; style="width:100%;height:250px;";></a>
-		<p><b>Keywords:</b> Ruins</p> 
-		<p><b>Location:</b> To the southwest of the border</p>
+		<a href="https://user-images.githubusercontent.com/64807615/82739884-3048ca80-9d76-11ea-9b4e-6f16f30df41a.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82739884-3048ca80-9d76-11ea-9b4e-6f16f30df41a.jpg"; style="width:100%;height:250px;";></a>
+		<p><b>Naruto Uzumaki’s House 2</b> Behind the plant box near Naruto Uzumaki before the construction barriers</p>
   </div>
 <hr>
 		<p><b>Location K</b></p>	
-		<a href="fksboard" target="_blank" style="color:black">
-		<image src="fksboard"; style="width:100%;height:250px;"></a>
+		<a href="https://user-images.githubusercontent.com/64807615/82739885-30e16100-9d76-11ea-80cf-a4c046fac8c3.jpg" target="_blank" style="color:black">
+		<image src="https://user-images.githubusercontent.com/64807615/82739885-30e16100-9d76-11ea-80cf-a4c046fac8c3.jpg"; style="width:600px;height:250px;"></a>
 		<p><b>Keywords:</b> Ruins</p> 
-		<p><b>Location:</b> To the southwest of the border</p>
+		<p><b>Narrow Alley</b> Narrow alley near the playground</p>
 
 <footer>
   <p>Footer</p>
