--- a/fks.html
+++ b/fks.html
@@ -60,6 +60,7 @@
 		<image src="https://user-images.githubusercontent.com/64807615/82739889-33dc5180-9d76-11ea-81f1-0dbd6dce93b9.jpg"; style="width:100%;height:250px;";></a>
 		<p><b>Alley</b> Around the corner of the Duty Room</p>
   </div>
+</div>
 <hr>
 <div class="row">
   <div class="column">
@@ -76,6 +77,7 @@
 		<p><b>Hospital Side</b> Behind the tree at the left side of the Konoha Hospital</p>
   </div>
 <hr>
+</div>
 <div class="row">
   <div class="column">
 		<p><b>Location E</b></p>	
@@ -91,6 +93,7 @@
 		<p><b>Ninja School</b> The playground near Kakashi</p>
   </div>
 <hr>
+</div>
 <div class="row">
   <div class="column">
 		<p><b>Location G</b></p>	
@@ -106,6 +109,7 @@
 		<p><b>Love Temple</b> Beside the stairs coming from Konohagakure Property leading to Love Temple</p>
   </div>
 <hr>
+</div>
 <div class="row">
   <div class="column">
 		<p><b>Location I</b></p>	
@@ -120,6 +124,7 @@
 		<image src="https://user-images.githubusercontent.com/64807615/82739884-3048ca80-9d76-11ea-9b4e-6f16f30df41a.jpg"; style="width:100%;height:250px;";></a>
 		<p><b>Naruto Uzumaki’s House 2</b> Behind the plant box near Naruto Uzumaki before the construction barriers</p>
   </div>
+</div>
 <hr>
 		<p><b>Location K</b></p>	
 		<a href="https://user-images.githubusercontent.com/64807615/82739885-30e16100-9d76-11ea-80cf-a4c046fac8c3.jpg" target="_blank" style="color:black">
