--- a/fks.html
+++ b/fks.html
@@ -128,7 +128,7 @@
 <hr>
 		<p><b>Location K</b></p>	
 		<a href="https://user-images.githubusercontent.com/64807615/82739885-30e16100-9d76-11ea-80cf-a4c046fac8c3.jpg" target="_blank" style="color:black">
-		<image src="https://user-images.githubusercontent.com/64807615/82739885-30e16100-9d76-11ea-80cf-a4c046fac8c3.jpg"; style="width:550px;height:250px;"></a>
+		<image src="https://user-images.githubusercontent.com/64807615/82739885-30e16100-9d76-11ea-80cf-a4c046fac8c3.jpg"; style="width:50%;height:250px;"></a>
 		<p><b>Narrow Alley</b> Narrow alley near the playground</p>
 
 <footer>
