--- a/bclass.html
+++ b/bclass.html
@@ -52,7 +52,7 @@
 <div class="row">
   <div class="column" style="width:25%"> 
 		<a href="/mdc.html" style="color:black">
-		<image src="xx"; style="width:100%;height:150px;";></a>
+		<image src="https://user-images.githubusercontent.com/64807615/82740784-989baa00-9d7e-11ea-8638-f50e6750d58d.png"; style="width:100%;height:150px;";></a>
   </div>
 
   <div class="column" style="width:75%">
