--- a/imm.html
+++ b/imm.html
@@ -55,18 +55,13 @@
 <hr>
 		<a href="https://user-images.githubusercontent.com/64807615/82741167-f8e01b00-9d81-11ea-86b0-bc4a833bb859.jpg" target="_blank" style="color:black">
 		<image src="https://user-images.githubusercontent.com/64807615/82741167-f8e01b00-9d81-11ea-86b0-bc4a833bb859.jpg"; style="width:600px;height:250px;";></a>
-		<p>Open you <br>chat box</br>. Click <br>current</br>. Type <br>“What are you doing?“</br>. Hit <br>send</br>.</p>
+		<p>Open you <b>chat box</b>. Click <br>current</b>. Type <b>“What are you doing?“</b>. Hit <br>send</b>.</p>
 		<p><i>*no quotation marks, capital W*</i></p>
 <hr>			
 
 		<a href="https://user-images.githubusercontent.com/64807615/82741161-f4b3fd80-9d81-11ea-85fd-6e15da74cea4.jpg" target="_blank" style="color:black">
 		<image src="https://user-images.githubusercontent.com/64807615/82741161-f4b3fd80-9d81-11ea-85fd-6e15da74cea4.jpg"; style="width:600px;height:250px;";></a>
-		<p>You will need to drop the fishes into any of the water holes.</p>
-<hr>
-		<a href="https://user-images.githubusercontent.com/64807615/82741163-f67dc100-9d81-11ea-9703-d2026fc029d7.jpg" target="_blank" style="color:black">
-		<image src="https://user-images.githubusercontent.com/64807615/82741163-f67dc100-9d81-11ea-9703-d2026fc029d7.jpg"; style="width:600px;height:250px;";></a>
 		<p>Jiraiya would be startled and you would have completed the quest.</p>
-		</article>
 	</section>
 
 <footer>
