--- a/imm.html
+++ b/imm.html
@@ -55,8 +55,8 @@
 <hr>
 		<a href="https://user-images.githubusercontent.com/64807615/82741167-f8e01b00-9d81-11ea-86b0-bc4a833bb859.jpg" target="_blank" style="color:black">
 		<image src="https://user-images.githubusercontent.com/64807615/82741167-f8e01b00-9d81-11ea-86b0-bc4a833bb859.jpg"; style="width:600px;height:250px;";></a>
-		<p>Open you <b>chat box</b>. Click <br>current</b>. Type <b>“What are you doing?“</b>. Hit <br>send</b>.</p>
-		<p><i>*no quotation marks, capital W*</i></p>
+		<p>Open you <b>chat box</b>. Click <b>current</b>. Type <b>“What are you doing?“</b>. Hit <b>send</b>.</p>
+		<br><i>*no quotation marks, capital W*</i>
 <hr>			
 
 		<a href="https://user-images.githubusercontent.com/64807615/82741161-f4b3fd80-9d81-11ea-85fd-6e15da74cea4.jpg" target="_blank" style="color:black">
