--- a/cclass.html
+++ b/cclass.html
@@ -72,11 +72,11 @@
 <hr>
 <div class="row">
 	<div class="column" style="width:25%"> 
-	<a href="/xx.html" style="color:black">
-	<image src="xx"; style="width:100%;height:150px;";></a>
+	<a href="/pe.html" style="color:black">
+	<image src="https://user-images.githubusercontent.com/64807615/83340940-6bb43d80-a310-11ea-9cb8-759cd936b4fa.jpg"; style="width:100%;height:150px;";></a>
 	</div>
 	<div class="column" style="width:75%">
-	<a href="/xx.html" style="color:black">
+	<a href="/pe.html" style="color:black">
 	<h3> Paw Encyclopedia </h3></a>
 	</div>
 </div>
