--- a/pe.html
+++ b/pe.html
@@ -48,22 +48,22 @@
 		<hr>
 		<a href="https://user-images.githubusercontent.com/64807615/83340937-6951e380-a310-11ea-80ce-af848aefc79f.jpg" target="_blank">
 		<p><image src="https://user-images.githubusercontent.com/64807615/83340937-6951e380-a310-11ea-80ce-af848aefc79f.jpg"; style="width:600px;height:500px;text-align:center;" class="center"></p></a>
-		<p> Location of Ninneko (cats) at Konohagakure </p>
-		<p><b style="color:green">Green</b> is outside streets </p>
-		<p><b style="color:yellow">Yellow</b> is inside the building </p>
-		<p><b style="color:red">Red</b> is on the roof </p>
+		<p style="text-align:center"> Location of Ninneko (cats) at Konohagakure </p>
+		<p style="text-align:center"><b style="color:green">Green</b> is outside streets </p>
+		<p style="text-align:center"><b style="color:yellow">Yellow</b> is inside the building </p>
+		<p style="text-align:center"><b style="color:red">Red</b> is on the roof </p>
 		<hr>
 		<a href="https://user-images.githubusercontent.com/64807615/83340938-6b1ba700-a310-11ea-819e-e91191264170.jpg" target="_blank" style="color:black">
 		<image src="https://user-images.githubusercontent.com/64807615/83340938-6b1ba700-a310-11ea-819e-e91191264170.jpg"; style="width:600px;height:250px;text-align:center;" class="center";></a>
-		<p> Ninnekos can be inside the building; </p>
+		<p style="text-align:center"> Ninnekos can be inside the building; </p>
 		<hr>
 		<a href="https://user-images.githubusercontent.com/64807615/83340939-6bb43d80-a310-11ea-81b8-b17b8a55a9b1.jpg" target="_blank" style="color:black">
 		<image src="https://user-images.githubusercontent.com/64807615/83340939-6bb43d80-a310-11ea-81b8-b17b8a55a9b1.jpg"; style="width:600px;height:250px;text-align:center;" class="center";></a>
-		<p> Or can be on top of the building; </p>
+		<p style="text-align:center"> Or can be on top of the building; </p>
 		<hr>
 		<a href="https://user-images.githubusercontent.com/64807615/83340940-6bb43d80-a310-11ea-9cb8-759cd936b4fa.jpg" target="_blank" style="color:black">
 		<image src="https://user-images.githubusercontent.com/64807615/83340940-6bb43d80-a310-11ea-9cb8-759cd936b4fa.jpg"; style="width:600px;height:250px;text-align:center;" class="center";></a>
-		<p> Or they can simply be outside the streets or grass. You just need to approach them and pick them up. Do this for 5 times and you’ll finish your quest. </p>
+		<p style="text-align:center"> Or they can simply be outside the streets or grass. You just need to approach them and pick them up. Do this for 5 times and you’ll finish your quest. </p>
 		
 		</article>
 	</section>
