--- a/cclass.html
+++ b/cclass.html
@@ -94,11 +94,11 @@
 <hr>
 <div class="row">
 	<div class="column" style="width:25%"> 
-	<a href="/xx.html" style="color:black">
-	<image src="xx"; style="width:100%;height:150px;";></a>
+	<a href="/fk.html" style="color:black">
+	<image src="https://user-images.githubusercontent.com/64807615/83340898-16782c00-a310-11ea-971b-d29f33144550.jpg"; style="width:100%;height:150px;";></a>
 	</div>
 	<div class="column" style="width:75%">
-	<a href="/xx.html" style="color:black">
+	<a href="/fk.html" style="color:black">
 	<h3> Find Kitten </h3></a>
 	</div>
 </div>
