--- a/fk.html
+++ b/fk.html
@@ -55,12 +55,11 @@
 		<a href="https://user-images.githubusercontent.com/64807615/83340902-18da8600-a310-11ea-88ef-fdd851ca0f5e.jpg" target="_blank" style="color:black">
 		<image src="https://user-images.githubusercontent.com/64807615/83340902-18da8600-a310-11ea-88ef-fdd851ca0f5e.jpg"; style="width:100%;height:400px;" class="center"></a>
 		</div>
-		<p style="text-align:center"> Auto-navigate feature is disabled. You need to run around the Konoha street looking for boxes that glimmers. 
-		They are all over the place. My go to box is the one located at Konohagakure Property. In front of the Love Temple. Under the street lantern post. </p>
+		<p style="text-align:center"> Auto-navigate feature is disabled. You need to run around the Konoha street looking for boxes that glimmers. They are all over the place. </p>
 </div>
 <hr>
 		<a href="https://user-images.githubusercontent.com/64807615/83340898-16782c00-a310-11ea-971b-d29f33144550.jpg" target="_blank" style="color:black">
-		<image src="https://user-images.githubusercontent.com/64807615/83340898-16782c00-a310-11ea-971b-d29f33144550.jpg"; style="width:600px;height:250px;" class="center"></a>
+		<image src="https://user-images.githubusercontent.com/64807615/83340898-16782c00-a310-11ea-971b-d29f33144550.jpg"; style="width:600px;height:275px;" class="center"></a>
 		<p style="text-align:center"> You just need to run through or attack the boxes. There is a high chance a kitten will appear and you would have completed your bounty. </p>
 		</article>
 	</section>
