--- a/cclass.html
+++ b/cclass.html
@@ -83,11 +83,11 @@
 <hr>
 <div class="row">
 	<div class="column" style="width:25%"> 
-	<a href="/xx.html" style="color:black">
-	<image src="xx"; style="width:100%;height:150px;";></a>
+	<a href="/cb.html" style="color:black">
+	<image src="https://user-images.githubusercontent.com/64807615/83342018-8d1b2680-a31c-11ea-99fc-404e6a9700e2.jpg"; style="width:100%;height:150px;";></a>
 	</div>
 	<div class="column" style="width:75%">
-	<a href="/xx.html" style="color:black">
+	<a href="/cb.html" style="color:black">
 	<h3> Collect Bug </h3></a>
 	</div>
 </div>
